[ADD]  Ajout 3 utilisateurs, générer des tokens et générer les droits d'accès
