# src/controllers/author.controller.ts
@@ -8,17 +8,17 @@ import {bookService, BookService} from "../services/book.service";
 
 @Route("authors")
 @Tags("Authors")
-@Security("jwt",["write","read"])
 export class AuthorController extends Controller {
   // Récupère tous les auteurs
   @Get("/")
-
+  @Security("jwt",["author:read"])
   public async getAllAuthors(): Promise<AuthorDTO[]> {
     return authorService.getAllAuthors();
   }
 
   // Récupère un auteur par ID
   @Get("{id}")
+    @Security("jwt",["author:read"])
   public async getAuthorById(@Path() id: number): Promise<AuthorDTO> {
     let author:Author | null = await authorService.getAuthorById(id);
     if(author ===  null){
@@ -33,6 +33,7 @@ export class AuthorController extends Controller {
 
   // Crée un nouvel auteur
   @Post("/")
+    @Security("jwt",["author:create"])
   public async createAuthor(
       @Body() requestBody: AuthorDTO
   ): Promise<AuthorDTO> {
@@ -47,6 +48,7 @@ export class AuthorController extends Controller {
 
   // Supprime un auteur par ID
   @Delete("{id}")
+    @Security("jwt",["author:delete"])
   public async deleteAuthor(@Path() id: number): Promise<void> {
     const hasBookCopies = await authorService.hasBookCopies(id);
     if (hasBookCopies) {
@@ -61,6 +63,7 @@ export class AuthorController extends Controller {
 
   // Met à jour un auteur par ID
   @Patch("{id}")
+    @Security("jwt",["author:update"])
   public async updateAuthor(
       @Path() id: number,
       @Body() requestBody: AuthorDTO
@@ -83,6 +86,7 @@ export class AuthorController extends Controller {
   }
 
   @Get("{id}/books")
+    @Security("jwt",["author:read"])
   public async getBooksByAuthor(@Path() id: number): Promise<BookDTO[]> {
     const author = await authorService.getAuthorById(id);
     if (!author) {
